[project]
name = "ampycure"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Webster", email = "websterb17@gmail.com" }
]
dependencies = [
    "Click>=8.1.3",
    "cycler>=0.11.0",
    "eyeD3>=0.9.7",
    "ffprobe>=0.5",  
    "Flask>=2.2.2",
    "Flask-SQLAlchemy>=2.5.1",
    "gunicorn>=20.1.0",
    "itsdangerous>=2.1.2",
    "Jinja2>=3.1.2",
    "kiwisolver>=1.4.3",
    "MarkupSafe>=2.1.1",
    "matplotlib>=3.6.0",
    "numpy>=1.23.2",
    "psycopg2>=2.9.3",  
    "psycopg2>=2.9.3",
    "pyAudioAnalysis>=0.3.14",
    "pydub>=0.25.1",
    "pyparsing>=3.0.9",
    "python-dateutil>=2.8.2",
    "python-magic>=0.4.27",
    "scikit-learn>=1.1.1",
    "scipy>=1.9.1",
    "six>=1.16.0",
    "SQLAlchemy>=1.4.40",
    "Werkzeug>=2.2.2"
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ampycure"]
